z-index fix

--- a/src/components/ThreeScene/ThreeScene.scss
+++ b/src/components/ThreeScene/ThreeScene.scss
@@ -6,10 +6,10 @@
   top: 0px; // ? Header height
   left: 0;
   width: 100%;
-  height: 100svh;
+  max-height: 100svh;
   overflow: hidden;
 
-  z-index: 1;
+  z-index: -1;
 
   &__section {
     width: 100%;
@@ -18,7 +18,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-
 
 
     &:nth-child(1 of .three-scene__section) {
