--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -26,5 +26,7 @@
     min-height: 400px;
     position: relative;
     // overflow: hidden;
+
+    isolation: isolate;
   }
 }
